# diffusion-vl-grounding

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: download_refcoco.py
src/eval/: benchmark.py  metrics.py
src/models/: ar_baseline.py  diffusion_vlm.py
